Fix overflowing text bug

--- a/src/components/scss/ListNav.scss
+++ b/src/components/scss/ListNav.scss
@@ -30,6 +30,7 @@
     gap: 0.5em;
     font-size: 1.4rem;
     cursor: pointer;
+    flex-wrap: wrap;
 
     .delete-list-icon {
       width: 1em;
